** you can replace `endpoint<...>::create(...)`  with `endpoint<...>{...}` for value or `std::make_shared<endpoint<...>>(...)` for shared_ptr.
* Updated timeout duration setting function parameter type as `std::chorono::milliseconds`. #342, #345
** User can pass any duration types like `std::chrono::milliseconds`, `std::chrono::seconds`, etc.
** The Mminimum resolution is milliseconds.
=== other updates
* Moved all implementations of basic_endpoint member functions to impl. #343
* Deleted unused and undefined `is_error()` function. #341
* Deleted `client` move operations. #339
* Fixed cmake warnings due to CMP0167. #338
* Removed invalid `#`. #336, #337
* Refined documents. #335, #340
* Added separate compilation mode customization points. #331
* Added destructor comment for basic_endpoint and client. #330
* Refined unit_test. #328, #329
* Updated cli library. #327
* Added all RTT output mode to bench. #326
* Fixed private constructor chosen problem on publish packet. #325
* Refined tests. #322, #333, #334

== 8.0.1
* Fixed required boost version. #322
** Boost 1.84.0 or later is required.
*** If you don't build tests, Boost 1.82.0 or later is required.
* Fixed bench tool infinity acqire packet_id problem on QoS1, 2. #320
* Added `ASYNC_MQTT_BUILD_LIB` cmake option. #319
* Restored missing Dockerfile.ubuntu. #318

== 8.0.0
=== breaking changes
* `client` becomes `shared_ptr` similar as `endpoint`. #315
** To create `client` instance, `client<...>::create(args)` similar as `endpoint`.
** This is required to keep client's lifetime during async operation is working.
** `client` and `endpoint` are consistent interface now.
=== other updates
* Move endpoint definition (using) to endpoint_fwd.hpp #311, #312
* install `*.ipp` files along with other header files #309
* Refined documents. #308

== 7.0.0
=== breaking changes
* client::async_recv() CompletionHandler signature is updated to `void(error_code, packet_variant)`. #281.