@@ -97,12 +97,18 @@ div#navigation table {
 <p>User can pass any duration types like <code>std::chrono::milliseconds</code>, <code>std::chrono::seconds</code>, etc.</p>
 </li>
 <li>
-<p>The Mminimum resolution is milliseconds.
-=== other updates</p>
+<p>The Mminimum resolution is milliseconds.</p>
 </li>
 </ul>
 </div>
 </li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_other_updates">other updates</h3>
+<div class="ulist">
+<ul>
 <li>
 <p>Moved all implementations of basic_endpoint member functions to impl. #343</p>
 </li>
@@ -119,7 +125,7 @@ div#navigation table {
 <p>Removed invalid <code>#</code>. #336, #337</p>
 </li>
 <li>
-<p>Refined documents. #335, #340</p>
+<p>Refined documents. #335, #340, #347</p>
 </li>
 <li>
 <p>Added separate compilation mode customization points. #331</p>
@@ -200,12 +206,18 @@ div#navigation table {
 <p>This is required to keep client&#8217;s lifetime during async operation is working.</p>
 </li>
 <li>
-<p><code>client</code> and <code>endpoint</code> are consistent interface now.
-=== other updates</p>
+<p><code>client</code> and <code>endpoint</code> are consistent interface now.</p>
 </li>
 </ul>
 </div>
 </li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_other_updates_2">other updates</h3>
+<div class="ulist">
+<ul>
 <li>
 <p>Move endpoint definition (using) to endpoint_fwd.hpp #311, #312</p>
 </li>
@@ -249,8 +261,7 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
-<p>It works well with other Boost.Asio based libraries, and Boost.Asio itself.
-=== other updates</p>
+<p>It works well with other Boost.Asio based libraries, and Boost.Asio itself.</p>
 </li>
 </ul>
 </div>
@@ -258,6 +269,13 @@ div#navigation table {
 </ul>
 </div>
 </li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_other_updates_3">other updates</h3>
+<div class="ulist">
+<ul>
 <li>
 <p>Added footprint example. #304</p>
 </li>
@@ -429,7 +447,7 @@ div#navigation table {
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_updates">other updates</h3>
+<h3 id="_other_updates_4">other updates</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -557,7 +575,7 @@ div#navigation table {
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_updates_2">other updates</h3>
+<h3 id="_other_updates_5">other updates</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -682,7 +700,7 @@ div#navigation table {
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_updates_3">other updates</h3>
+<h3 id="_other_updates_6">other updates</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -720,7 +738,7 @@ div#navigation table {
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_updates_4">other updates</h3>
+<h3 id="_other_updates_7">other updates</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -773,7 +791,7 @@ Hence I categolize the fix to breaking changes.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_updates_5">other updates</h3>
+<h3 id="_other_updates_8">other updates</h3>
 <div class="ulist">
 <ul>
 <li>
